keycloak-app/templates/dummy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-nginx
  template:
    metadata:
      labels:
        app: dummy-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-nginx-service
spec:
  selector:
    app: dummy-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://oauth2-proxy/oauth2/start"
spec:
  ingressClassName: nginx
  rules:
  - host: dummy-nginx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-nginx-service
            port:
              number: 80
