keycloak-app/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: oauth2-proxy
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-app-oauth2-proxy
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-app
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak-app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-app
            port:
              number: 80
